clusters/apps/arr/plex/plex-deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: arr-stack
  annotations:
    kompose.cmd: C:\kompose\kompose.exe convert
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: plex
  name: plex
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: plex
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: C:\kompose\kompose.exe convert
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: plex
    spec:
      containers:
        - env:
            - name: PGID
              value: "1000"
            - name: PUID
              value: "1000"
            - name: TZ
              value: America/Chicago
            - name: VERSION
              value: docker
          image: lscr.io/linuxserver/plex:latest
          name: plex
          ports:
            - containerPort: 32400
              protocol: TCP
          volumeMounts:
            - mountPath: /data/downloads
              name: arr-claim0
      restartPolicy: Always
      volumes:
        - name: arr-claim0
          persistentVolumeClaim:
            claimName: arr-claim0
