clusters/apps/arr/plex/plex-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: arr-stack
  annotations:
    kompose.cmd: C:\kompose\kompose.exe convert
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: plex
  name: plex
spec:
  ports:
    - name: "32400"
      port: 32400
      targetPort: 32400
  selector:
    io.kompose.service: plex
